# security-event-rag-demo

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: build.yml
authorization-service/: pyproject.toml
authorization-service/src/authz/: authorization_routes.py  config.py  eligibility.py  main.py  models.py
authorization-service/tests/: conftest.py  test_authorization_routes.py  test_eligibility.py  test_instruction_eligibility.py
instruction-lifecycle-manager/: Dockerfile  README.md  pyproject.toml
instruction-lifecycle-manager/src/ilm/: auth.py  service.py
instruction-lifecycle-manager/src/ilm/models/: api.py  instruction.py
instruction-lifecycle-manager/src/instruction_lifecycle_manager/: __init__.py  auth.py  config.py  database.py  dependencies.py  kafka_publisher.py  main.py  opa.py  repository.py  routes.py  security_event_broadcaster.py  security_event_repository.py  security_event_serialization.py  security_event_ui_store.py  security_event_watcher.py  security_ui_routes.py  service.py  storage.py  ui_broadcaster.py  ui_routes.py  ui_watcher.py
instruction-lifecycle-manager/src/instruction_lifecycle_manager/models/: __init__.py  api.py  enums.py  instruction.py  security_event.py
instruction-lifecycle-manager/src/instruction_lifecycle_manager/static/: app.js  index.html  instruction.html  instruction.js  styles.css
instruction-lifecycle-manager/src/instruction_lifecycle_manager/static/security_events/: app.js  event.html  event.js  index.html  monitor.css  security-events.css
instruction-service/: README.md  pyproject.toml
instruction-service/src/inst/: authorization.py  config.py  dependencies.py  kafka_publisher.py  main.py  routes.py  security_event_repository.py  security_event_ui_store.py  security_ui_routes.py  service.py  ui_routes.py
instruction-service/src/inst/models/: api.py  enums.py  fact_validation.py  instruction_fact.py  security_event.py
instruction-service/src/inst/static/: app.js  index.html  styles.css
instruction-service/src/inst/static/security_events/: app.js  event.html  event.js  index.html  monitor.css
instruction-service/tests/: test_instruction_fact.py  test_models_security_event.py  test_routes.py  test_security_event_repository.py  test_service.py  test_ui_and_main.py
neo4j-graph-model/: README.md  relationships.cypher  schema.cypher
opa-policy-seed/: Dockerfile  README.md  upload_policies.py
opa-policy-seed/policies/instruction/: violations.rego
opa-policy-seed/policies/payment/: amount_limits.rego  common.rego  lifecycle.rego  violations.rego
opa-policy-seed/policies/ssi/: approval_matrix.rego  (+3 more)
payment-service/: pyproject.toml
payment-service/src/ps/: authorization.py  config.py  dependencies.py  ilm_client.py  kafka_publisher.py  repository.py  routes.py  security_event_repository.py  security_event_ui_store.py  security_ui_routes.py  service.py  ui_routes.py
payment-service/src/ps/models/: api.py  enums.py  fact_validation.py  payment.py  payment_fact.py  security_event.py
payment-service/src/ps/static/: app.js  index.html  styles.css
payment-service/src/ps/static/security_events/: app.js  event.html  event.js  index.html  monitor.css
payment-service/tests/: test_models.py  test_payment_fact.py  test_payment_service.py  test_repository.py  test_ui_routes.py
security-event-chat/: Dockerfile  README.md  pyproject.toml
security-event-chat/security_event_chat/: cypher.py  neo4j.py  reranker.py
security-event-chat/security_event_chat/static/: app.js  index.html  styles.css
security-event-chat/src/chat_application/: cypher.py  neo4j.py  ollama.py  rag.py
security-event-chat/src/security_event_chat/: config.py  main.py  models.py  ollama.py  qdrant.py  rag.py
security-event-qdrant-etl/: Dockerfile  README.md  pyproject.toml
security-event-qdrant-etl/security_event_qdrant_etl/: enrichment.py  health.py  main.py  ollama_client.py  pipeline.py
security-event-qdrant-etl/security_event_qdrant_etl/static/: styles.css
security-event-qdrant-etl/src/etl/: enrichment.py  instruction_pipeline.py  neo4j_client.py
security-event-qdrant-etl/src/security_event_qdrant_etl/: __init__.py  config.py  instruction_client.py  kafka_consumer.py  neo4j_client.py  qdrant_store.py
security-event-qdrant-etl/src/security_event_qdrant_etl/static/: app.js  index.html
security-event-test-harness/: Dockerfile  README.md  pyproject.toml
security-event-test-harness/harness/: actions.py  config.py  fixtures.py  ilm_client.py  results.py  zitadel_auth.py
security-event-test-harness/harness/static/: styles.css
security-event-test-harness/src/harness/: __init__.py  app.py  helpers.py  run.py
security-event-test-harness/src/harness/static/: app.js  index.html
sequence-service/tests/: test_formatting.py  test_routes.py
ssi-chat/: README.md
ssi-chat/regression/: README.md  api_smoke.py  models.py  questions.yaml  runner.py
ssi-chat/tests/: test_authorization_client.py  test_authorization_client_async.py  test_authorization_client_instruction.py  test_cypher.py  test_formatting.py  test_rag_eligibility.py  test_rag_helpers.py  test_rag_service.py  test_regression_models.py  test_response_formatter.py
ssi-demo-harness/: README.md  seed-demo-data.sh
ssi-indexer/: Dockerfile  README.md  pyproject.toml
ssi-indexer/search-profiles/: README.md  instruction_security_event.yaml  instruction_state.yaml  payment_fact.yaml  payment_security_event.yaml
ssi-indexer/search-profiles/_shared/: authorization_fact.yaml  authorization_merged.yaml
ssi-indexer/src/etl/: auth_routes.py  config.py  enrichment.py  instruction_pipeline.py  main.py  neo4j_client.py  ollama_client.py  payment_pipeline.py  qdrant_store.py
ssi-indexer/src/etl/search_text/: __init__.py  builder.py  context.py  transforms.py
ssi-indexer/src/etl/static/: app.js  index.html  styles.css
ssi-indexer/tests/: test_enrichment.py  test_main_api.py  test_neo4j_client.py  test_qdrant_store.py  test_search_profiles.py  test_search_text.py
zitadel-seed/: README.md  pyproject.toml  seed.py  users.yaml
(+23 files in other folders)
