[project]
name = "authorization-service"
version = "0.1.0"
description = "Policy evaluation via OPA — eligible approvers and authorization decisions"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "PyJWT[crypto]>=2.10.0",
    "pyyaml>=6.0.0",
    "ssi-telemetry",
]

[project.scripts]
authorization-service = "authz.main:run"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/authz"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src", "../shared/platform_auth/src"]

[tool.coverage.run]
omit = ["src/authz/auth.py"]

[tool.coverage.report]
fail_under = 70
