[project]
name = "payment-service"
version = "0.1.0"
description = "REST API for cash payment lifecycle against approved SSI instructions"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "motor>=3.6.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "PyJWT[crypto]>=2.10.0",
    "aiokafka>=0.12.0",
    "aiofiles>=24.1.0",
    "platform-auth",
    "sequence-client",
    "authz-client",
    "ssi-telemetry",
]

[project.scripts]
payment-service = "ps.main:run"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ps"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src", "../shared/platform_auth/src", "../shared/sequence_client/src", "../shared/authz_client/src"]

[tool.coverage.run]
source = ["ps"]
omit = ["src/ps/main.py"]

[tool.coverage.report]
fail_under = 70
