[project]
name = "security-event-qdrant-etl"
version = "0.1.0"
description = "Kafka ETL to Neo4j + Qdrant with hybrid search console"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "aiokafka>=0.12.0",
    "neo4j>=5.26.0",
    "qdrant-client>=1.15.2",
    "httpx>=0.28.0",
]

[project.scripts]
security-event-search = "security_event_qdrant_etl.main:run"
security-event-monitor = "security_event_qdrant_etl.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["security_event_qdrant_etl"]
