[project]
name = "security-event-test-harness"
version = "0.1.0"
description = "End-to-end harness for instruction lifecycle API with ZITADEL OIDC"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pymongo>=4.10.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
security-event-test-harness = "harness.run:main"
security-event-test-harness-ui = "harness.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harness"]
